# rust-cli-template

./: .clog.toml  Cargo.toml  README.md
.github/workflows/: release.yml  release_nightly.yml
src/: cli.rs  error.rs  macros.rs  main.rs
